--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
+      content="width=device-width, initial-scale=1, 
+      maximum-scale=5"
+   />
 
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="icon" href="assets/images/devchallenges.png" />
 
     <link
       rel="shortcut icon"
@@ -22,74 +24,50 @@
     />
 
     <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
-      </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
-    </div>
+    <header>
+      <h1>The creative crew</h1>
+        <p class="p-creative-crew" ><strong>WHO WE ARE</strong><br/> We are team of creatively diverse. driven.<br/>
+          innovative individuals working in varius<br> locations from the world.</p>
+    </header>
+    <main>
+        <div class="container-cards">
+            <div class="card">
+                <img src="assets/images/photo1.png"/>
+                <span>PRODUCT OWNER</span>
+                <p><strong>Bill Mahoney</strong></p>
+            </div>
+            <div class="card mid-3 down-2">
+                <img src="assets/images/photo2.png"/>
+                <span>PRODUCT OWNER</span>
+                <p><strong>Bill Mahoney</strong></p>
+            </div>
+            <div class="card">
+                <img src="assets/images/photo3.png"/>
+                <span>PRODUCT OWNER</span>
+                <p><strong>Bill Mahoney</strong></p>
+            </div>
+            <div class="card down-2">
+                <img src="assets/images/photo4.png"/>
+                <span>PRODUCT OWNER</span>
+                <p><strong>Bill Mahoney</strong></p>
+            </div>
+            <div class="card mid-3">
+              <img src="assets/images/photo5.png"/>
+              <span>PRODUCT OWNER</span>
+              <p><strong>Bill Mahoney</strong></p>
+          </div>
+          <div class="card down-2">
+            <img src="assets/images/photo6.png"/>
+            <span>PRODUCT OWNER</span>
+            <p><strong>Bill Mahoney</strong></p>
+        </div>
+        </div>
+    </main>
+    <footer>
+      <p>created by <a class="creator" href="https://github.com/MrAkimo">MrAkimo</a> - devChallenges.io</p>
+    </footer>
   </body>
 </html>
